[package]
name = "notification_center"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
config = "0.15.9"
async-trait = "0.1.87"
uuid = { version = "1.15.1", features = ["v4"] }
chrono = "0.4.40"
thiserror = "2.0.12"
mockall = "0.13.1"
tokio = { version = "1.44.0", features = ["full"] }
axum = "0.8.1"
axum-macros = "0.4"
serde_json = "1.0.140"